--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Normal': 88.912,\n",
-       " 'MDD': 10.083,\n",
-       " 'Mixed Bipolar': 0.40299999999999997,\n",
-       " 'Pure Mania': 0.6020000000000001}"
+       "{'Normal': 88.9012,\n",
+       " 'MDD': 10.076600000000001,\n",
+       " 'Mixed Bipolar': 0.4189666666666667,\n",
+       " 'Pure Mania': 0.6032333333333333}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
     "}\n",
     "\n",
     "\n",
-    "population_size = 10000\n",
+    "population_size = 100000\n",
     "sequence_length = 52  # 52 weeks\n",
     "num_simulations = 30\n",
     "\n",
