--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Normal': 88.9012,\n",
-       " 'MDD': 10.076600000000001,\n",
-       " 'Mixed Bipolar': 0.4189666666666667,\n",
-       " 'Pure Mania': 0.6032333333333333}"
+       "{'Normal': 88.663,\n",
+       " 'MDD': 10.405000000000001,\n",
+       " 'Mixed Bipolar': 0.594,\n",
+       " 'Pure Mania': 0.338}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,16 +75,12 @@
     "\n",
     "    return distribution\n",
     "\n",
-    "transition_matrix = {\n",
-    "    'normal': {'normal': 0.99610, 'depressed': 0.00382, 'manic': 0.00008},\n",
-    "    'depressed': {'normal': 0.4055, 'depressed': 0.5802, 'manic': 0.0143},\n",
-    "    'manic': {'normal': 0.999926, 'depressed': 0.000034, 'manic': 0.00004}\n",
-    "}\n",
+    "transition_matrix = {'normal': {'normal': 0.9948432513018938, 'depressed': 0.005156748698106229, 'manic': 0.0}, 'depressed': {'normal': 0.5323753275500882, 'depressed': 0.4476687662528254, 'manic': 0.019955906197086426}, 'manic': {'normal': 0.2789316598230362, 'depressed': 0.45047841798780647, 'manic': 0.2705899221891573}}\n",
     "\n",
     "\n",
     "population_size = 100000\n",
     "sequence_length = 52  # 52 weeks\n",
-    "num_simulations = 30\n",
+    "num_simulations = 1\n",
     "\n",
     "sum_percentages = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
     "\n",
@@ -97,6 +93,145 @@
     "average_percentages = {k: v / num_simulations for k, v in sum_percentages.items()}\n",
     "\n",
     "average_percentages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Transition Matrix: {'normal': {'normal': 0.9678040009994667, 'depressed': 0.03219599900053324, 'manic': 0.0}, 'depressed': {'normal': 0.9288971783698942, 'depressed': 0.0699897555460989, 'manic': 0.0011130660840068427}, 'manic': {'normal': 0.2380042603750424, 'depressed': 0.52076819867353, 'manic': 0.24122754095142754}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "from deap import base, creator, tools, algorithms\n",
+    "\n",
+    "def generate_markov_chain_sequence(initial_state, transition_matrix, steps):\n",
+    "    current_state = initial_state\n",
+    "    sequence = [current_state]\n",
+    "    for _ in range(steps - 1):\n",
+    "        current_state = np.random.choice(['normal', 'depressed', 'manic'], p=list(transition_matrix[current_state].values()))\n",
+    "        sequence.append(current_state)\n",
+    "    return sequence\n",
+    "\n",
+    "def simulate_population(population_size, steps, transition_matrix):\n",
+    "    population = []\n",
+    "    for _ in range(population_size):\n",
+    "        initial_state = 'normal'\n",
+    "        sequence = generate_markov_chain_sequence(initial_state, transition_matrix, steps)\n",
+    "        population.append(sequence)\n",
+    "    return population\n",
+    "\n",
+    "def categorize_mental_health_state(markov_chain_output):\n",
+    "    consecutive_depression = 0\n",
+    "    has_mania = False\n",
+    "    has_two_consecutive_depression = False\n",
+    "    for state in markov_chain_output:\n",
+    "        if state == 'depressed':\n",
+    "            consecutive_depression += 1\n",
+    "            if consecutive_depression >= 2:\n",
+    "                has_two_consecutive_depression = True\n",
+    "        elif state == 'manic':\n",
+    "            has_mania = True\n",
+    "            consecutive_depression = 0  \n",
+    "        else:\n",
+    "            consecutive_depression = 0  \n",
+    "    if has_two_consecutive_depression and has_mania:\n",
+    "        return 'Mixed Bipolar'\n",
+    "    elif has_two_consecutive_depression:\n",
+    "        return 'MDD'\n",
+    "    elif has_mania:\n",
+    "        return 'Pure Mania'\n",
+    "    else:\n",
+    "        return 'Normal'\n",
+    "\n",
+    "def analyze_population_distribution(population):\n",
+    "    distribution = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
+    "    for sequence in population:\n",
+    "        category = categorize_mental_health_state(sequence)\n",
+    "        distribution[category] += 1\n",
+    "    return distribution\n",
+    "\n",
+    "\n",
+    "target_distribution = {'Normal': 89, 'MDD': 10, 'Mixed Bipolar': 0.99999, 'Pure Mania': 0.00001}\n",
+    "\n",
+    "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+    "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+    "\n",
+    "toolbox = base.Toolbox()\n",
+    "\n",
+    "def generate_individual():\n",
+    "    return [random.random() for _ in range(9)]\n",
+    "\n",
+    "toolbox.register(\"individual\", tools.initIterate, creator.Individual, generate_individual)\n",
+    "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
+    "\n",
+    "def normalize_probabilities(individual):\n",
+    "    for i in range(0, len(individual), 3):\n",
+    "        total = sum(max(0, p) for p in individual[i:i+3])  \n",
+    "        if total > 0:\n",
+    "            for j in range(3):\n",
+    "                individual[i+j] = max(0, individual[i+j]) / total\n",
+    "        else:\n",
+    "            individual[i:i+3] = [1/3, 1/3, 1/3]  \n",
+    "    return individual\n",
+    "\n",
+    "def mutate(individual):\n",
+    "    for i in range(len(individual)):\n",
+    "        if random.random() < 0.1:  \n",
+    "            individual[i] += random.gauss(0, 0.1) \n",
+    "            individual[i] = max(0, individual[i])  \n",
+    "    return individual,\n",
+    "\n",
+    "toolbox.register(\"mutate\", mutate)\n",
+    "toolbox.register(\"mate\", tools.cxUniform, indpb=0.5)\n",
+    "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
+    "\n",
+    "\n",
+    "def evaluate(individual):\n",
+    "    individual = normalize_probabilities(individual)\n",
+    "    transition_matrix = {\n",
+    "        'normal': {'normal': individual[0], 'depressed': individual[1], 'manic': individual[2]},\n",
+    "        'depressed': {'normal': individual[3], 'depressed': individual[4], 'manic': individual[5]},\n",
+    "        'manic': {'normal': individual[6], 'depressed': individual[7], 'manic': individual[8]}\n",
+    "    }\n",
+    "    simulated_population = simulate_population(1000, 52, transition_matrix)\n",
+    "    population_distribution = analyze_population_distribution(simulated_population)\n",
+    "    population_percentages = {k: (v / 1000) * 100 for k, v in population_distribution.items()}\n",
+    "    fitness = -sum(abs(population_percentages[k] - target_distribution[k]) for k in target_distribution)\n",
+    "    return fitness,\n",
+    "\n",
+    "toolbox.register(\"evaluate\", evaluate)\n",
+    "\n",
+    "\n",
+    "population_size = 300\n",
+    "num_generations = 50\n",
+    "\n",
+    "population = toolbox.population(n=population_size)\n",
+    "\n",
+    "for gen in range(num_generations):\n",
+    "    offspring = algorithms.varAnd(population, toolbox, cxpb=0.5, mutpb=0.1)\n",
+    "    fits = toolbox.map(toolbox.evaluate, offspring)\n",
+    "    for fit, ind in zip(fits, offspring):\n",
+    "        ind.fitness.values = fit\n",
+    "    population = toolbox.select(offspring, k=len(population))\n",
+    "\n",
+    "\n",
+    "best_ind = tools.selBest(population, 1)[0]\n",
+    "best_transition_matrix = {\n",
+    "    'normal': {'normal': best_ind[0], 'depressed': best_ind[1], 'manic': best_ind[2]},\n",
+    "    'depressed': {'normal': best_ind[3], 'depressed': best_ind[4], 'manic': best_ind[5]},\n",
+    "    'manic': {'normal': best_ind[6], 'depressed': best_ind[7], 'manic': best_ind[8]}\n",
+    "}\n",
+    "\n",
+    "print(\"Best Transition Matrix:\", best_transition_matrix)\n"
    ]
   }
  ],
