--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -93,6 +100,13 @@
     "average_percentages = {k: v / num_simulations for k, v in sum_percentages.items()}\n",
     "\n",
     "average_percentages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DEAP"
    ]
   },
   {
