--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Normal': 88.663,\n",
-       " 'MDD': 10.405000000000001,\n",
-       " 'Mixed Bipolar': 0.594,\n",
-       " 'Pure Mania': 0.338}"
+       "{'Normal': 87.652,\n",
+       " 'MDD': 9.679,\n",
+       " 'Mixed Bipolar': 1.6629999999999998,\n",
+       " 'Pure Mania': 1.006}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
     "\n",
     "    return distribution\n",
     "\n",
-    "transition_matrix = {'normal': {'normal': 0.9948432513018938, 'depressed': 0.005156748698106229, 'manic': 0.0}, 'depressed': {'normal': 0.5323753275500882, 'depressed': 0.4476687662528254, 'manic': 0.019955906197086426}, 'manic': {'normal': 0.2789316598230362, 'depressed': 0.45047841798780647, 'manic': 0.2705899221891573}}\n",
+    "transition_matrix = {'normal': {'normal': 0.9947635315033879, 'depressed': 0.005236468496612034, 'manic': 0.0}, 'depressed': {'normal': 0.4961168967332019, 'depressed': 0.44711882565984223, 'manic': 0.05676427760695586}, 'manic': {'normal': 0.3144127430726594, 'depressed': 0.41431162105580444, 'manic': 0.27127563587153614}}\n",
     "\n",
     "\n",
     "population_size = 100000\n",
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Transition Matrix: {'normal': {'normal': 0.9678040009994667, 'depressed': 0.03219599900053324, 'manic': 0.0}, 'depressed': {'normal': 0.9288971783698942, 'depressed': 0.0699897555460989, 'manic': 0.0011130660840068427}, 'manic': {'normal': 0.2380042603750424, 'depressed': 0.52076819867353, 'manic': 0.24122754095142754}}\n"
+      "Best Transition Matrix: {'normal': {'normal': 0.9947635315033879, 'depressed': 0.005236468496612034, 'manic': 0.0}, 'depressed': {'normal': 0.4961168967332019, 'depressed': 0.44711882565984223, 'manic': 0.05676427760695586}, 'manic': {'normal': 0.3144127430726594, 'depressed': 0.41431162105580444, 'manic': 0.27127563587153614}}\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
     "    return distribution\n",
     "\n",
     "\n",
-    "target_distribution = {'Normal': 89, 'MDD': 10, 'Mixed Bipolar': 0.99999, 'Pure Mania': 0.00001}\n",
+    "target_distribution = {'Normal': 87.5, 'MDD': 10, 'Mixed Bipolar': 2, 'Pure Mania': 0.5}\n",
     "\n",
     "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
     "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
