--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Normal': 87.652,\n",
-       " 'MDD': 9.679,\n",
-       " 'Mixed Bipolar': 1.6629999999999998,\n",
-       " 'Pure Mania': 1.006}"
+       "{'Normal': 87.63683333333333,\n",
+       " 'MDD': 9.763700000000002,\n",
+       " 'Mixed Bipolar': 1.6119999999999997,\n",
+       " 'Pure Mania': 0.9874666666666668}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
     "\n",
     "population_size = 100000\n",
     "sequence_length = 52  # 52 weeks\n",
-    "num_simulations = 1\n",
+    "num_simulations = 30\n",
     "\n",
     "sum_percentages = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
     "\n",
@@ -246,6 +246,301 @@
     "}\n",
     "\n",
     "print(\"Best Transition Matrix:\", best_transition_matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Beta Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'normal': {'normal': 0.9947552154697274, 'depressed': 0.005244784530269323, 'manic': 3.1549462876539726e-15}, 'depressed': {'normal': 0.49611964750398774, 'depressed': 0.44711461479397935, 'manic': 0.05676573770203284}, 'manic': {'normal': 0.31441540592541145, 'depressed': 0.4143201461538295, 'manic': 0.27126444792075904}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def generate_markov_chain_sequence(initial_state, transition_matrix, steps):\n",
+    "    current_state = initial_state\n",
+    "    sequence = [current_state]\n",
+    "\n",
+    "    for _ in range(steps - 1):\n",
+    "        current_state = np.random.choice(['normal', 'depressed', 'manic'], p=list(transition_matrix[current_state].values()))\n",
+    "        sequence.append(current_state)\n",
+    "\n",
+    "    return sequence\n",
+    "population = []\n",
+    "def simulate_population(population_size, steps, transition_matrix):\n",
+    "    \n",
+    "    for _ in range(population_size):\n",
+    "        initial_state = 'normal' \n",
+    "        sequence = generate_markov_chain_sequence(initial_state, transition_matrix, steps)\n",
+    "        population.append(sequence)\n",
+    "\n",
+    "    return population\n",
+    "\n",
+    "def categorize_mental_health_state(markov_chain_output):\n",
+    "    consecutive_depression = 0\n",
+    "    has_mania = False\n",
+    "    has_two_consecutive_depression = False\n",
+    "\n",
+    "    for state in markov_chain_output:\n",
+    "        if state == 'depressed':\n",
+    "            consecutive_depression += 1\n",
+    "            if consecutive_depression >= 2:\n",
+    "                has_two_consecutive_depression = True\n",
+    "        elif state == 'manic':\n",
+    "            has_mania = True\n",
+    "            consecutive_depression = 0  \n",
+    "        else:\n",
+    "            consecutive_depression = 0  \n",
+    "\n",
+    "    if has_two_consecutive_depression and has_mania:\n",
+    "        return 'Mixed Bipolar'\n",
+    "    elif has_two_consecutive_depression:\n",
+    "        return 'MDD'\n",
+    "    elif has_mania:\n",
+    "        return 'Pure Mania'\n",
+    "    else:\n",
+    "        return 'Normal'\n",
+    "\n",
+    "def analyze_population_distribution(population):\n",
+    "    distribution = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
+    "\n",
+    "    for sequence in population:\n",
+    "        category = categorize_mental_health_state(sequence)\n",
+    "        distribution[category] += 1\n",
+    "\n",
+    "    return distribution\n",
+    "\n",
+    "\n",
+    "ftransition_matrix = {'normal': {'normal': 0.9947635315033879, 'depressed': 0.005236468496612034, 'manic': 0.0}, 'depressed': {'normal': 0.4961168967332019, 'depressed': 0.44711882565984223, 'manic': 0.05676427760695586}, 'manic': {'normal': 0.3144127430726594, 'depressed': 0.41431162105580444, 'manic': 0.27127563587153614}}\n",
+    "def mean_variance_to_alpha_beta(mean, variance):\n",
+    "    \"\"\"Convert mean and variance of a Beta distribution to alpha and beta parameters.\"\"\"\n",
+    "    alpha = ((1 - mean) / variance - 1 / mean) * mean**2\n",
+    "    beta = alpha * (1 / mean - 1)\n",
+    "    return alpha, beta\n",
+    "\n",
+    "def normalize_transition_matrix(transition_matrix):\n",
+    "    \"\"\"\n",
+    "    Normalize the rows of a transition matrix so that the values in each row add up to 1.\n",
+    "\n",
+    "    Args:\n",
+    "    - transition_matrix (dict): A dictionary of dictionaries representing the transition matrix.\n",
+    "\n",
+    "    Returns:\n",
+    "    - dict: A normalized transition matrix.\n",
+    "    \"\"\"\n",
+    "    normalized_matrix = {}\n",
+    "    \n",
+    "    for state, transitions in transition_matrix.items():\n",
+    "        # Calculate the sum of the row values\n",
+    "        row_sum = sum(transitions.values())\n",
+    "        \n",
+    "        # Normalize each value in the row if row_sum is not zero\n",
+    "        if row_sum > 0:\n",
+    "            normalized_matrix[state] = {next_state: value / row_sum for next_state, value in transitions.items()}\n",
+    "        else:\n",
+    "            # Handle the case where row_sum is 0 to avoid division by zero\n",
+    "            # This could involve setting the transitions equally or some other logic\n",
+    "            num_transitions = len(transitions)\n",
+    "            normalized_matrix[state] = {next_state: 1 / num_transitions for next_state in transitions}\n",
+    "    \n",
+    "    return normalized_matrix\n",
+    "\n",
+    "def new_value(old_value):\n",
+    "    variance = 1e-10\n",
+    "    if old_value == 0:\n",
+    "        old_value = 1e-6\n",
+    "    alpha, beta = mean_variance_to_alpha_beta(old_value, variance)\n",
+    "    return np.random.beta(alpha, beta)  # Example adjustment\n",
+    "\n",
+    "# Iterate over the ftransition_matrix and update its values\n",
+    "for state in ftransition_matrix:\n",
+    "    for next_state in ftransition_matrix[state]:\n",
+    "        # Update the value with a new number\n",
+    "        old_value = ftransition_matrix[state][next_state]\n",
+    "        ftransition_matrix[state][next_state] = new_value(old_value)\n",
+    "\n",
+    "transition_matrix = normalize_transition_matrix(ftransition_matrix)\n",
+    "print(transition_matrix)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "population_size = 100000\n",
+    "sequence_length = 52  # 52 weeks\n",
+    "num_simulations = 1\n",
+    "\n",
+    "sum_percentages = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
+    "\n",
+    "for _ in range(num_simulations):\n",
+    "    for i in range(population_size):\n",
+    "        simulated_population = simulate_population(1, sequence_length, transition_matrix)\n",
+    "    population_distribution = analyze_population_distribution(simulated_population)\n",
+    "    population_percentages = {k: (v / population_size) * 100 for k, v in population_distribution.items()}\n",
+    "    for category in sum_percentages:\n",
+    "        sum_percentages[category] += population_percentages[category]\n",
+    "average_percentages = {k: v / num_simulations for k, v in sum_percentages.items()}\n",
+    "\n",
+    "average_percentages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Normal': 87747, 'MDD': 9653, 'Mixed Bipolar': 1595, 'Pure Mania': 1005}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def mean_variance_to_alpha_beta(mean, variance=1e-6):\n",
+    "    \"\"\"Convert mean and variance of a Beta distribution to alpha and beta parameters.\"\"\"\n",
+    "    # Adjust mean values very close to 0 or 1 to avoid division by zero or negative alpha/bet\n",
+    "    # Calculate alpha and beta using the adjusted mean\n",
+    "    alpha = mean * (mean * (1 - mean) / variance - 1)\n",
+    "    beta = (1 - mean) * (mean * (1 - mean) / variance - 1)\n",
+    "    if mean == 0:\n",
+    "        alpha , beta = 0\n",
+    "    return alpha, beta\n",
+    "\n",
+    "def normalize_transition_matrix(transition_matrix):\n",
+    "    normalized_matrix = {}\n",
+    "    for state, transitions in transition_matrix.items():\n",
+    "        row_sum = sum(transitions.values())\n",
+    "        normalized_matrix[state] = {next_state: value / row_sum for next_state, value in transitions.items()}\n",
+    "    return normalized_matrix\n",
+    "\n",
+    "def generate_and_normalize_transition_matrix(base_transition_matrix, variance=1e-6):\n",
+    "    individual_matrix = {}\n",
+    "    for state in base_transition_matrix:\n",
+    "        individual_matrix[state] = {}\n",
+    "        for next_state in base_transition_matrix[state]:\n",
+    "            old_value = base_transition_matrix[state][next_state] if base_transition_matrix[state][next_state] > 0 else 1e-9\n",
+    "            alpha, beta = mean_variance_to_alpha_beta(old_value, variance)\n",
+    "            # Ensure alpha and beta are positive\n",
+    "            \n",
+    "            \n",
+    "            if alpha > 0:\n",
+    "                new_value = np.random.beta(alpha, beta)\n",
+    "            else:\n",
+    "                new_value = 0\n",
+    "            individual_matrix[state][next_state] = new_value\n",
+    "    return normalize_transition_matrix(individual_matrix)\n",
+    "\n",
+    "def generate_markov_chain_sequence(initial_state, transition_matrix, steps):\n",
+    "    current_state = initial_state\n",
+    "    sequence = [current_state]\n",
+    "    for _ in range(steps - 1):\n",
+    "        current_state = np.random.choice(['normal', 'depressed', 'manic'], p=list(transition_matrix[current_state].values()))\n",
+    "        sequence.append(current_state)\n",
+    "    return sequence\n",
+    "\n",
+    "def simulate_population(population_size, steps, base_transition_matrix):\n",
+    "    population = []\n",
+    "    for _ in range(population_size):\n",
+    "        initial_state = 'normal'\n",
+    "        individual_matrix = generate_and_normalize_transition_matrix(base_transition_matrix)\n",
+    "        sequence = generate_markov_chain_sequence(initial_state, individual_matrix, steps)\n",
+    "        population.append(sequence)\n",
+    "    return population\n",
+    "\n",
+    "\n",
+    "def categorize_mental_health_state(markov_chain_output):\n",
+    "    \"\"\"Categorize the mental health state of an individual based on their Markov chain sequence.\"\"\"\n",
+    "    consecutive_depression = 0\n",
+    "    has_mania = False\n",
+    "    has_two_consecutive_depression = False\n",
+    "    for state in markov_chain_output:\n",
+    "        if state == 'depressed':\n",
+    "            consecutive_depression += 1\n",
+    "            if consecutive_depression >= 2:\n",
+    "                has_two_consecutive_depression = True\n",
+    "        elif state == 'manic':\n",
+    "            has_mania = True\n",
+    "            consecutive_depression = 0\n",
+    "        else:\n",
+    "            consecutive_depression = 0\n",
+    "    if has_two_consecutive_depression and has_mania:\n",
+    "        return 'Mixed Bipolar'\n",
+    "    elif has_two_consecutive_depression:\n",
+    "        return 'MDD'\n",
+    "    elif has_mania:\n",
+    "        return 'Pure Mania'\n",
+    "    else:\n",
+    "        return 'Normal'\n",
+    "\n",
+    "def analyze_population_distribution(population):\n",
+    "    \"\"\"Analyze the distribution of mental health categories in the simulated population.\"\"\"\n",
+    "    distribution = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
+    "    for sequence in population:\n",
+    "        category = categorize_mental_health_state(sequence)\n",
+    "        distribution[category] += 1\n",
+    "    return distribution\n",
+    "\n",
+    "# Base transition matrix\n",
+    "base_transition_matrix = {\n",
+    "    'normal': {'normal': 0.9947635315033879, 'depressed': 0.005236468496612034, 'manic': 0.0},\n",
+    "    'depressed': {'normal': 0.4961168967332019, 'depressed': 0.44711882565984223, 'manic': 0.05676427760695586},\n",
+    "    'manic': {'normal': 0.3144127430726594, 'depressed': 0.41431162105580444, 'manic': 0.27127563587153614}\n",
+    "}\n",
+    "\n",
+    "# Simulation parameters\n",
+    "population_size = 100000\n",
+    "sequence_length = 52  # For example, 52 weeks\n",
+    "\n",
+    "# Simulate the population\n",
+    "simulated_population = simulate_population(population_size, sequence_length, base_transition_matrix)\n",
+    "\n",
+    "# Analyze the population distribution\n",
+    "population_distribution = analyze_population_distribution(simulated_population)\n",
+    "\n",
+    "# Display the results\n",
+    "print(population_distribution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Normal': 87.747, 'MDD': 9.653, 'Mixed Bipolar': 1.595, 'Pure Mania': 1.005}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_population = sum(population_distribution.values())\n",
+    "\n",
+    "# Calculate the percentage for each state\n",
+    "percentage_distribution = {state: (count / total_population) * 100 for state, count in population_distribution.items()}\n",
+    "\n",
+    "percentage_distribution"
    ]
   }
  ],
