--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -399,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Normal': 87747, 'MDD': 9653, 'Mixed Bipolar': 1595, 'Pure Mania': 1005}\n"
+      "{'Normal': 87615, 'MDD': 9828, 'Mixed Bipolar': 1585, 'Pure Mania': 972}\n"
      ]
     }
    ],
@@ -520,16 +520,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Normal': 87.747, 'MDD': 9.653, 'Mixed Bipolar': 1.595, 'Pure Mania': 1.005}"
+       "{'Normal': 87.615,\n",
+       " 'MDD': 9.828000000000001,\n",
+       " 'Mixed Bipolar': 1.585,\n",
+       " 'Pure Mania': 0.972}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
