--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -545,6 +545,242 @@
     "\n",
     "percentage_distribution"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyTorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Normal': 21.313333333333333,\n",
+       " 'MDD': 19.976666666666667,\n",
+       " 'Mixed Bipolar': 37.79333333333333,\n",
+       " 'Pure Mania': 20.916666666666668}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def generate_markov_chain_sequence(initial_state, transition_matrix, steps):\n",
+    "    current_state = initial_state\n",
+    "    sequence = [current_state]\n",
+    "\n",
+    "    for _ in range(steps - 1):\n",
+    "        current_state = np.random.choice(['normal', 'depressed', 'manic'], p=list(transition_matrix[current_state].values()))\n",
+    "        sequence.append(current_state)\n",
+    "\n",
+    "    return sequence\n",
+    "\n",
+    "def simulate_population(population_size, steps, transition_matrix):\n",
+    "    population = []\n",
+    "    for _ in range(population_size):\n",
+    "        initial_state = 'normal' \n",
+    "        sequence = generate_markov_chain_sequence(initial_state, transition_matrix, steps)\n",
+    "        population.append(sequence)\n",
+    "\n",
+    "    return population\n",
+    "\n",
+    "def categorize_mental_health_state(markov_chain_output):\n",
+    "    consecutive_depression = 0\n",
+    "    has_mania = False\n",
+    "    has_two_consecutive_depression = False\n",
+    "\n",
+    "    for state in markov_chain_output:\n",
+    "        if state == 'depressed':\n",
+    "            consecutive_depression += 1\n",
+    "            if consecutive_depression >= 2:\n",
+    "                has_two_consecutive_depression = True\n",
+    "        elif state == 'manic':\n",
+    "            has_mania = True\n",
+    "            consecutive_depression = 0  \n",
+    "        else:\n",
+    "            consecutive_depression = 0  \n",
+    "\n",
+    "    if has_two_consecutive_depression and has_mania:\n",
+    "        return 'Mixed Bipolar'\n",
+    "    elif has_two_consecutive_depression:\n",
+    "        return 'MDD'\n",
+    "    elif has_mania:\n",
+    "        return 'Pure Mania'\n",
+    "    else:\n",
+    "        return 'Normal'\n",
+    "\n",
+    "def analyze_population_distribution(population):\n",
+    "    distribution = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
+    "\n",
+    "    for sequence in population:\n",
+    "        category = categorize_mental_health_state(sequence)\n",
+    "        distribution[category] += 1\n",
+    "\n",
+    "    return distribution\n",
+    "def normalize_transition_matrix(transition_matrix):\n",
+    "    normalized_matrix = {}\n",
+    "    for state, transitions in transition_matrix.items():\n",
+    "        total_probability = sum(transitions.values())\n",
+    "        normalized_transitions = {transition: prob / total_probability for transition, prob in transitions.items()}\n",
+    "        normalized_matrix[state] = normalized_transitions\n",
+    "    return normalized_matrix\n",
+    "\n",
+    "transition_matrix = normalize_transition_matrix({'normal': {'normal': 0.93159384, 'depressed': 0.06840618, 'manic': 0.0}, 'depressed': {'normal': 0.5408133, 'depressed': 0.2540833, 'manic': 0.20510338}, 'manic': {'normal': 0.8007522, 'depressed': 0.19924776, 'manic': 0}})\n",
+    "population_size = 1000\n",
+    "sequence_length = 52  # 52 weeks\n",
+    "num_simulations = 30\n",
+    "\n",
+    "sum_percentages = {'Normal': 0, 'MDD': 0, 'Mixed Bipolar': 0, 'Pure Mania': 0}\n",
+    "\n",
+    "for _ in range(num_simulations):\n",
+    "    simulated_population = simulate_population(population_size, sequence_length, transition_matrix)\n",
+    "    population_distribution = analyze_population_distribution(simulated_population)\n",
+    "    population_percentages = {k: (v / population_size) * 100 for k, v in population_distribution.items()}\n",
+    "    for category in sum_percentages:\n",
+    "        sum_percentages[category] += population_percentages[category]\n",
+    "average_percentages = {k: v / num_simulations for k, v in sum_percentages.items()}\n",
+    "\n",
+    "average_percentages\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Markov Chain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Transition Matrix: [[0.93159384 0.06840618 0.        ]\n",
+      " [0.5408133  0.2540833  0.20510338]\n",
+      " [0.8007522  0.19924776 0.        ]]\n",
+      "Best Fitness: -1.1381359100341797\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "torch.manual_seed(0)\n",
+    "random.seed(0)\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "population_size = 50\n",
+    "genome_length = 9  \n",
+    "num_generations = 50\n",
+    "mutation_rate = 0.1\n",
+    "mutation_strength = 0.1\n",
+    "num_steps = 52  \n",
+    "target_distribution = torch.tensor([87.5, 10, 2, 0.5])\n",
+    "\n",
+    "def initialize_population(population_size, genome_length):\n",
+    "    return torch.rand((population_size, genome_length), dtype=torch.float32)\n",
+    "\n",
+    "def simulate_markov_chain(transition_matrix, num_steps=52):\n",
+    "    states = torch.tensor([0, 1, 2]) \n",
+    "    sequence = []\n",
+    "    current_state = 0  \n",
+    "    for _ in range(num_steps):\n",
+    "        current_state = torch.multinomial(transition_matrix[current_state], 1).item()\n",
+    "        sequence.append(current_state)\n",
+    "    return sequence\n",
+    "\n",
+    "def categorize_mental_health_state(sequence):\n",
+    "    consecutive_depression = 0\n",
+    "    has_mania = False\n",
+    "    state_counts = torch.zeros(4)  \n",
+    "    \n",
+    "    for state in sequence:\n",
+    "        if state == 1:  # depressed\n",
+    "            consecutive_depression += 1\n",
+    "        else:\n",
+    "            if consecutive_depression >= 2:\n",
+    "                state_counts[1] += 1  # MDD\n",
+    "            consecutive_depression = 0\n",
+    "        \n",
+    "        if state == 2:  # manic\n",
+    "            has_mania = True\n",
+    "        state_counts[state] += 1\n",
+    "    \n",
+    "    if has_mania and consecutive_depression >= 2:\n",
+    "        state_counts[2] += 1  # Mixed Bipolar\n",
+    "    elif has_mania:\n",
+    "        state_counts[3] += 1  # Pure Mania\n",
+    "    \n",
+    "    return state_counts\n",
+    "\n",
+    "def evaluate_individual(individual):\n",
+    "    transition_matrix = individual.view(3, 3)\n",
+    "    transition_matrix /= transition_matrix.sum(dim=1, keepdim=True)\n",
+    "    \n",
+    "    state_counts = torch.zeros(4) \n",
+    "    for _ in range(1000): \n",
+    "        sequence = simulate_markov_chain(transition_matrix, num_steps=num_steps)\n",
+    "        state_counts += categorize_mental_health_state(sequence)\n",
+    "    \n",
+    "    \n",
+    "    simulated_distribution = (state_counts / state_counts.sum()) * 100\n",
+    "    fitness = -torch.sum(torch.abs(simulated_distribution - target_distribution))\n",
+    "    return fitness\n",
+    "\n",
+    "def mutate(individual):\n",
+    "    for i in range(len(individual)):\n",
+    "        if random.random() < mutation_rate:\n",
+    "            noise = mutation_strength * torch.randn(1).item()\n",
+    "            individual[i] += noise\n",
+    "            individual[i] = torch.clamp(individual[i], 0, 1)\n",
+    "    return individual\n",
+    "\n",
+    "\n",
+    "population = initialize_population(population_size, genome_length)\n",
+    "for generation in range(num_generations):\n",
+    "    fitnesses = torch.tensor([evaluate_individual(ind) for ind in population])\n",
+    "    \n",
+    "    _, top_indices = torch.topk(fitnesses, population_size // 2)\n",
+    "    selected = population[top_indices]\n",
+    "    \n",
+    "    offspring = selected.clone()\n",
+    "    for i in range(len(offspring)):\n",
+    "        offspring[i] = mutate(offspring[i])\n",
+    "    \n",
+    "    population = torch.cat((selected, offspring), 0)\n",
+    "\n",
+    "final_fitnesses = torch.tensor([evaluate_individual(ind) for ind in population])\n",
+    "best_index = torch.argmax(final_fitnesses)\n",
+    "best_individual = population[best_index]\n",
+    "best_transition_matrix = best_individual.view(3, 3) / best_individual.view(3, 3).sum(dim=1, keepdim=True)\n",
+    "\n",
+    "print(\"Best Transition Matrix:\", best_transition_matrix.numpy())\n",
+    "print(\"Best Fitness:\", final_fitnesses[best_index].item())\n"
+   ]
   }
  ],
  "metadata": {
@@ -563,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
