--- a/Markov_mood_model.ipynb
+++ b/Markov_mood_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,19 +562,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Normal': 21.313333333333333,\n",
-       " 'MDD': 19.976666666666667,\n",
-       " 'Mixed Bipolar': 37.79333333333333,\n",
-       " 'Pure Mania': 20.916666666666668}"
+       "{'Normal': 25.486666666666668,\n",
+       " 'MDD': 26.299999999999997,\n",
+       " 'Mixed Bipolar': 36.193333333333335,\n",
+       " 'Pure Mania': 12.02}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
     "        normalized_matrix[state] = normalized_transitions\n",
     "    return normalized_matrix\n",
     "\n",
-    "transition_matrix = normalize_transition_matrix({'normal': {'normal': 0.93159384, 'depressed': 0.06840618, 'manic': 0.0}, 'depressed': {'normal': 0.5408133, 'depressed': 0.2540833, 'manic': 0.20510338}, 'manic': {'normal': 0.8007522, 'depressed': 0.19924776, 'manic': 0}})\n",
+    "transition_matrix = normalize_transition_matrix({'normal': {'normal': 0.94821674, 'depressed': 0.051783282, 'manic': 0.0}, 'depressed': {'normal': 0.46674925, 'depressed': 0.3644992, 'manic': 0.16875157}, 'manic': {'normal': 0.3820281, 'depressed': 0.33003527, 'manic': 0.28793666}})\n",
     "population_size = 1000\n",
     "sequence_length = 52  # 52 weeks\n",
     "num_simulations = 30\n",
@@ -669,17 +669,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Transition Matrix: [[0.93159384 0.06840618 0.        ]\n",
-      " [0.5408133  0.2540833  0.20510338]\n",
-      " [0.8007522  0.19924776 0.        ]]\n",
-      "Best Fitness: -1.1381359100341797\n"
+      "Best Transition Matrix: [[0.95634323 0.0436568  0.        ]\n",
+      " [0.34734133 0.46024776 0.19241092]\n",
+      " [0.47813225 0.3268892  0.19497856]]\n",
+      "Best Fitness: -0.8053076267242432\n"
      ]
     }
    ],
@@ -693,7 +693,7 @@
     "random.seed(0)\n",
     "np.random.seed(0)\n",
     "\n",
-    "population_size = 50\n",
+    "population_size = 100\n",
     "genome_length = 9  \n",
     "num_generations = 50\n",
     "mutation_rate = 0.1\n",
@@ -772,6 +772,156 @@
     "        offspring[i] = mutate(offspring[i])\n",
     "    \n",
     "    population = torch.cat((selected, offspring), 0)\n",
+    "\n",
+    "final_fitnesses = torch.tensor([evaluate_individual(ind) for ind in population])\n",
+    "best_index = torch.argmax(final_fitnesses)\n",
+    "best_individual = population[best_index]\n",
+    "best_transition_matrix = best_individual.view(3, 3) / best_individual.view(3, 3).sum(dim=1, keepdim=True)\n",
+    "\n",
+    "print(\"Best Transition Matrix:\", best_transition_matrix.numpy())\n",
+    "print(\"Best Fitness:\", final_fitnesses[best_index].item())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'normal': {'normal': 0.94821674, 'depressed': 0.051783282, 'manic': 0.0}, 'depressed': {'normal': 0.46674925, 'depressed': 0.3644992, 'manic': 0.16875157}, 'manic': {'normal': 0.3820281, 'depressed': 0.33003527, 'manic': 0.28793666}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = best_transition_matrix.numpy()\n",
+    "states = [\"normal\", \"depressed\", \"manic\"]\n",
+    "\n",
+    "matrix_dict = {}\n",
+    "for i, state_row in enumerate(states):\n",
+    "    row_dict = {}\n",
+    "    for j, state_col in enumerate(states):\n",
+    "        row_dict[state_col] = matrix[i, j]\n",
+    "    matrix_dict[state_row] = row_dict\n",
+    "print(matrix_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Transition Matrix: [[0.94821674 0.05178328 0.        ]\n",
+      " [0.46674925 0.3644992  0.16875157]\n",
+      " [0.3820281  0.33003527 0.28793666]]\n",
+      "Best Fitness: -0.15646162629127502\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "torch.manual_seed(0)\n",
+    "random.seed(0)\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "population_size = 100  # Increased population size for greater diversity\n",
+    "genome_length = 9\n",
+    "num_generations = 50\n",
+    "initial_mutation_rate = 0.1\n",
+    "mutation_strength = 0.1\n",
+    "num_steps = 52\n",
+    "target_distribution = torch.tensor([87.5, 10, 2, 0.5])\n",
+    "\n",
+    "def initialize_population(population_size, genome_length):\n",
+    "    return torch.rand((population_size, genome_length), dtype=torch.float32)\n",
+    "\n",
+    "def simulate_markov_chain(transition_matrix, num_steps=52):\n",
+    "    states = torch.tensor([0, 1, 2])\n",
+    "    sequence = []\n",
+    "    current_state = 0\n",
+    "    for _ in range(num_steps):\n",
+    "        current_state = torch.multinomial(transition_matrix[current_state], 1).item()\n",
+    "        sequence.append(current_state)\n",
+    "    return sequence\n",
+    "\n",
+    "def categorize_mental_health_state(sequence):\n",
+    "    consecutive_depression = 0\n",
+    "    has_mania = False\n",
+    "    state_counts = torch.zeros(4)\n",
+    "    \n",
+    "    for state in sequence:\n",
+    "        if state == 1:  # depressed\n",
+    "            consecutive_depression += 1\n",
+    "        else:\n",
+    "            if consecutive_depression >= 2:\n",
+    "                state_counts[1] += 1  # MDD\n",
+    "            consecutive_depression = 0\n",
+    "        \n",
+    "        if state == 2:  # manic\n",
+    "            has_mania = True\n",
+    "        state_counts[state] += 1\n",
+    "    \n",
+    "    if has_mania and consecutive_depression >= 2:\n",
+    "        state_counts[2] += 1  # Mixed Bipolar\n",
+    "    elif has_mania:\n",
+    "        state_counts[3] += 1  # Pure Mania\n",
+    "    \n",
+    "    return state_counts\n",
+    "\n",
+    "def evaluate_individual(individual):\n",
+    "    transition_matrix = individual.view(3, 3)\n",
+    "    transition_matrix /= transition_matrix.sum(dim=1, keepdim=True)\n",
+    "    \n",
+    "    state_counts = torch.zeros(4)\n",
+    "    for _ in range(1000):\n",
+    "        sequence = simulate_markov_chain(transition_matrix, num_steps=num_steps)\n",
+    "        state_counts += categorize_mental_health_state(sequence)\n",
+    "    \n",
+    "    simulated_distribution = (state_counts / state_counts.sum()) * 100\n",
+    "    fitness = -torch.sum((simulated_distribution - target_distribution) ** 2)  # MSE as loss function\n",
+    "    return fitness\n",
+    "\n",
+    "def mutate(individual, mutation_rate):\n",
+    "    for i in range(len(individual)):\n",
+    "        if random.random() < mutation_rate:\n",
+    "            noise = mutation_strength * torch.randn(1).item()\n",
+    "            individual[i] += noise\n",
+    "            individual[i] = torch.clamp(individual[i], 0, 1)\n",
+    "    return individual\n",
+    "\n",
+    "def crossover(parent1, parent2):\n",
+    "    cross_point = random.randint(0, genome_length)\n",
+    "    child1 = torch.cat((parent1[:cross_point], parent2[cross_point:]))\n",
+    "    child2 = torch.cat((parent2[:cross_point], parent1[cross_point:]))\n",
+    "    return child1, child2\n",
+    "\n",
+    "population = initialize_population(population_size, genome_length)\n",
+    "mutation_rate = initial_mutation_rate\n",
+    "\n",
+    "for generation in range(num_generations):\n",
+    "    fitnesses = torch.tensor([evaluate_individual(ind) for ind in population])\n",
+    "    \n",
+    "    _, top_indices = torch.topk(fitnesses, population_size // 2)\n",
+    "    selected = population[top_indices]\n",
+    "    \n",
+    "    offspring = []\n",
+    "    while len(offspring) < population_size // 2:\n",
+    "        parents = selected[torch.randperm(len(selected))[:2]]\n",
+    "        child1, child2 = crossover(parents[0], parents[1])\n",
+    "        offspring.append(mutate(child1, mutation_rate))\n",
+    "        offspring.append(mutate(child2, mutation_rate))\n",
+    "    \n",
+    "    population = torch.cat((selected, torch.stack(offspring)), 0)\n",
+    "    mutation_rate *= 0.95  # Decrease mutation rate over generations\n",
     "\n",
     "final_fitnesses = torch.tensor([evaluate_individual(ind) for ind in population])\n",
     "best_index = torch.argmax(final_fitnesses)\n",
